@@ -19,7 +19,7 @@
         <module>../psychology</module>
         <module>../car_server</module>
         <module>../car_client</module>
-        <module>../Question bank</module>
+        <module>../question_bank</module>
     </modules>
     <properties>
         <encoding>UTF-8</encoding>
@@ -277,6 +277,7 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <release>${java.version}</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
